--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,17 @@ nav.navigation a.button {
   font-weight: 300;
   color: #757575;
   margin-top: 0;
+  margin-bottom: 0;
 }
+
+.profile h3 {
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 300;
+  color: #757575;
+  margin-top: 0;
+}
+
 
 /* index post list */
 #list-page {
